# ClipMind

./: README.md  SECURITY.md  index.html  package-lock.json  package.json
.github/workflows/: continuous-checks.yml  desktop-installers.yml  security-review.yml
docs/: agent-workflow.md  architecture.md  clipboard-session-contract.md  data-contract.md  implementation-tickets.md  ocr-validation-fixtures.md  ocr.md  platform-validation.md  release-readiness-audit-2026-06-12.md  release-security-checklist.md  security-storage.md  semantic-search-plan.md  standards-compliance.md  threat-model.md
scripts/: release-checksums.mjs
src/: domain.ts  main.ts  sample-data.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
