[package]
name = "clipmind"
version = "0.1.0"
description = "Encrypted clipboard working memory for macOS and Windows"
authors = ["RatStreet Studios"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "clipmind_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
arboard = "3"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = ["tray-icon"] }
url = "2"
